Attacks wrapping fix

--- a/src/styles/actor/npc/index.scss
+++ b/src/styles/actor/npc/index.scss
@@ -92,8 +92,8 @@ $negative-modifer: #cc3311;
         font-family: 'Gelasio', Georgia, serif;
         color: black;
         line-height: 1.4;
-        margin: auto;
-        max-width: 64ch;
+        margin-right: auto;
+        max-width: 54ch;
 
         & + p {
             margin-top: 0.5em;
